Se realizo el Buscar Se agregaron consultas en el DAOExt se cierra la modal en codigo desde el controller

--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,7 @@
         <!-- Middelware de AngularJS -->
         <script src="app/middleware/middleware.comprobarSession.js" type="text/javascript"></script>
         <script src="app/middleware/middleware.validarEditar.js" type="text/javascript"></script>
+        <script src="app/middleware/middleware.validarBuscar.js" type="text/javascript"></script>
         
         <!-- Controladores de AngularJS -->
         <script src="app/controller/controller.login.js" type="text/javascript"></script>
